# mcp-mifosx

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: go-ci.yml  python-ci.yml  rust-ci.yml
Banking_Agent/: .env.example  .gitignore  CLI_WALKTHROUGH.md  MCP_WALKTHROUGH.md  README.md  agent.py  docker-compose.yml  requirements.txt
Banking_Agent/MCP-Server-Python-Implementation/: .env.example  Dockerfile  LICENSE  README.md  agent.py  docker-compose.yml.example  mcp_adapter.py  mcp_server.py  requirements.txt
Banking_Agent/cli/: go.mod  main.go
Banking_Agent/core/: api_server.py
Banking_Agent/mysql-init/: 01-databases.sql
Banking_Agent/python/: README.md  agent.py  mcp_adapter.py  mcp_server.py
Banking_Agent/tools/: mcp_adapter.py  registry.py
go/: .env.example  .gitignore  .golangci.yml  Dockerfile  README.md  go.mod  go.sum  main.go
go/adapter/: adapter.go
go/benches/: README.md  benchmarks_test.go  results.md
go/server/: http_server.go  server.go
go/tools/: accounting.go  bulk.go  clients.go  composite.go  diagnostics.go  documents.go  (+8 more)
java/: pom.xml
mcp_plugin/: .gitignore  build.gradle  dependencies.gradle  settings.gradle
nodejs/: package-lock.json  package.json
plugin/: pom.xml
python/: .env.example  .gitignore  Dockerfile  README.md  mcp_server.py  pyproject.toml  requirements.txt
rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
rust/benches/: README.md  benchmarks.rs  results.md
rust/src/: adapter.rs  embeddings.rs  lib.rs  main.rs  registry.rs  server.rs
rust/src/domains/: accounting.rs  bulk.rs  charges.rs  clients.rs  collaterals.rs  groups.rs  loans.rs  mod.rs  savings.rs  staff.rs
(+179 files in other folders)
