[package]
name = "mcp-rust-mifosx"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls", "query"] }
dotenvy = "0.15"
schemars = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
