[package]
name = "mcp-rust-mifosx"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "1.2.0", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.13", features = ["json", "rustls", "query"] }
dotenvy = "0.15"
schemars = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"

# Semantic Route Intent — CPU-only ML for context window pruning
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
tokenizers = "0.22"
hf-hub = { version = "0.5", default-features = false, features = ["tokio", "rustls-tls"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
